Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,5 @@
-<html>
-	<head>
-		<title>About | Ruby on Rails Tutorial Sample App</title>
-	</head>
-	<body>
-		<h1>About</h1>
-		<p>
-			This is what we live for, it's what we're all about!
-		</p>
-	</body>
-</html>
+<% provide(:title, "About") %>
+<h1>About</h1>
+<p>
+	This is what we live for, it's what we're all about!
+</p>
