--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Home | Ruby on Rails Tutorial Sample App</title>
-	</head>
-	<body>
-		<h1>Sample App</h1>
-		<p>
-			This is the sample app created by Justin Lloyd.
-		</p>
-	</body>
-</html>
+<% provide(:title, "Home") %>
+<h1>Sample App</h1>
+<p>
+	This is the sample app created by Justin Lloyd.
+</p>
