--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,13 @@
-<h1>Sample App</h1>
-<p>
-	This is the sample app created by Justin Lloyd.
-</p>
+<div class = "center jumbotron">
+	<h1>Welcome to Justin Lloyd's Sample App</h1>
+
+	<h2>
+		This is the home page for
+		<a href = "http://www.a10networks.com/">A10 Networks</a>
+		Sample Application.
+	</h2>
+
+	<%= link_to "Sign in now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
