--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,11 @@
-<h1>UserMailer#password_reset</h1>
+<h1>Password Reset</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+  To reset your password, click on the link below:
 </p>
+
+<%= link_to "Reset Password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+<p>This link will expire in two hours.</p>
+
+<p>If you did not request your password to be reset, please sit tight, stay calm, ignore this email, and wait it out.  Your password will stay as it is.</p>
