--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,31 @@
-<div class = "center jumbotron">
-	<h1>Welcome to Justin Lloyd's Sample App</h1>
+<% if logged_in? %>
+	<div class = "row">
+		<aside class = "col-md-4">
+			<section class = "user_info">
+				<%= render 'shared/user_info' %>
+			</section>
+			<section class = "micropost_form">
+				<%= render 'shared/micropost_form' %>
+			</section>
+		</aside>
+		<div class = "col-md-8">
+			<h3>Micropost Feed</h3>
+			<%= render 'shared/feed' %>
+		</div>
+	</div>	
+<% else %>
+	<div class = "center jumbotron">
+		<h1>Welcome to Justin Lloyd's Sample App</h1>
 
-	<h2>
-		This is the home page for
-		<a href = "http://www.a10networks.com/">A10 Networks</a>
-		Sample Application.
-	</h2>
+		<h2>
+			This is the home page for
+			<a href = "http://www.a10networks.com/">A10 Networks</a>
+			Sample Application.
+		</h2>
 
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %><br><br>
-	<%= link_to "Log in", login_path, class: "btn btn-lg btn-primary" %>
-</div>
+		<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %><br><br>
+		<%= link_to "Log in", login_path, class: "btn btn-lg btn-primary" %>
+	</div>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
+	<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
+<% end %>
